    CHANGED: disabled krarc ioslave because of bug 280939 resulting in data loss.

    FIXED: [ 280939 ] krusader deletes zip archive when cut&pasting it into itself
           NOTE: the fix is to disable krarc, see CHANGED section
    FIXED: loading defaults on the Panel page in Konfigurator has no effect
    FIXED: changes to "Show new/close tab buttons" don't take effect immediately
    FIXED: when options requiring a gui restart are changed, the panel history is lost
    FIXED: [ 277838 ] Swap Panels no longer works


2.4.0-beta1 "Migration"
=======================

    ADDED: option: Panel > Status/Totalsbar > Show space information
    ADDED: Konfigurator: reset button
    ADDED: option: Startup > User Interface > Show actions toolbar
    ADDED: options: Panel > Layout: "Compact", "Classic"
    ADDED: mountman gui option: Show only removable devices
    ADDED: tabs have close buttons
    ADDED: reset button for filter dialog
    ADDED: option: Panel > Operation > Filter dialog remembers settings
    ADDED: tabs can be dragged to the other side
    ADDED: action: Move Current Tab to Other Side - shortcut: CTRL + SHIFT + O
    ADDED: view: iconsizes 64, 128, 256
    ADDED: history is saved/restored
    ADDED: action: Restore Selection
    ADDED: option: Panel > Operation > Unselect files before copy/move
    ADDED: support for xz archives

    CHANGED: new default panel layout
    CHANGED: option: Panel > View > Show previews -> Show previews by default
    CHANGED: removed option "Show free disk space in the Totalsbar"
             since that setting is controlled by the layout chosen in Panel >
             Layout
    CHANGED: removed option "Preserve Attributes" - KIO always preserves
             Attributes
    CHANGED: option: Panel > Filelist icon size -> Default icon size
    CHANGED: quickfilter follows case sensivity setting of quicksearch
    CHANGED: quickfilter expands wildcards
    CHANGED: duplicate tab / open in new tab: